RESOLVED FIXED255577
SVG clip-path is sometimes broken on stevejobsarchive.com
https://bugs.webkit.org/show_bug.cgi?id=255577
Summary SVG clip-path is sometimes broken on stevejobsarchive.com
Simon Fraser (smfr)
Reported 2023-04-17 21:40:13 PDT
Sometimes SVG clip-path fails on http://book.stevejobsarchive.com
Attachments
Simon Fraser (smfr)
Comment 1 2023-04-17 21:40:24 PDT
Simon Fraser (smfr)
Comment 2 2023-04-17 21:47:27 PDT
EWS
Comment 3 2023-04-18 11:20:29 PDT
Committed 263087@main (e4d2a7474950): <https://commits.webkit.org/263087@main> Reviewed commits have been landed. Closing PR #12845 and removing active labels.
Said Abou-Hallawa
Comment 4 2023-04-24 23:19:54 PDT
*** Bug 255701 has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 5 2023-05-03 12:48:48 PDT
This fix is available in macOS Ventura 13.4 beta 4 (22F5059b ) and iOS 16.5 beta 4 (20F5059a).
Note You need to log in before you can comment on or make changes to this bug.